--- a/assets/modules/common/_components.scss
+++ b/assets/modules/common/_components.scss
@@ -6,4 +6,5 @@
 @import "components/buttons";
 @import "components/menu";
 @import "components/topline";
+@import "components/separator";
 @import "components/error-page";
