--- a/assets/modules/portal/portal.scss
+++ b/assets/modules/portal/portal.scss
@@ -1,1 +1,22 @@
 @charset "UTF-8";
+
+// ====================
+// Variables & Helpers
+// ====================
+@import "variables";
+@import "helpers";
+
+// ====================
+// Common
+// ====================
+@import "../common/common";
+
+// ====================
+// Regions
+// ====================
+@import "regions/clipboard";
+
+// ====================
+// Components
+// ====================
+@import "components/title";
