--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -37,7 +37,7 @@
             {% endif %}
         </div>
         <p class="app-error-page__message">
-            {{ error_trans_text|trans({}, 'erros') }}
+            {{ error_trans_text|trans({}, 'errors') }}
         </p>
         <p class="app-error-page__info-wrapper">
             <span class="app-error-page__bracket">{{ '[' }}</span>
