--- a/templates/homepage/components/portal-card.html.twig
+++ b/templates/homepage/components/portal-card.html.twig
@@ -2,7 +2,7 @@
     <a href="{{ path('portal_show', {'name': portal.slug}) }}">
         <p class="app-homepage-portal-card__title">{{ portal.title|capitalize }}</p>
         <p class="app-homepage-portal-card__preview">
-            {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь есть все необходимое для того, чтобы изучать английский язык онлайн бесплатно.' }}
+            {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь есть все необходимое для того, чтобы изучать английский язык онлайн бесплатно. (@PREVIEW)' }}
         </p>
     </a>
 </div>
