--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -12,7 +12,7 @@
         </section>
     {% endif %}
 
-    <hr class="app-homepage-separator"/>
+    <hr class="app-separator"/>
 
     <section class="app-homepage__layer app-homepage-infograph__layer">
         <article class="app-homepage-infograph">
@@ -35,7 +35,7 @@
         </article>
     </section>
 
-    <hr class="app-homepage-separator"/>
+    <hr class="app-separator"/>
 
     <section class="app-homepage__layer">
         <article class="app-homepage-article">
