--- a/templates/regions/sidebar.html.twig
+++ b/templates/regions/sidebar.html.twig
@@ -6,7 +6,7 @@
         </article>
     {% endif %}
     {% if topics %}
-        <hr class="app-homepage-separator"/>
+        <hr class="app-separator"/>
         <section class="app-sidebar-topics">
             <h3 class="app-sidebar-topics__headline">
                 <a href="#">
