--- a/assets/modules/common/components/_separator.scss
+++ b/assets/modules/common/components/_separator.scss
@@ -1,17 +1,17 @@
 @charset "UTF-8";
 
 @import "../variables";
-@import "../helpers";
+@import "../mixins";
 
 /**
- * Separator of Homepage elements.
+ * Basic elements separator.
  *
- * @molecule Separator
- * @section Homepage
+ * @molecule Basic Separator
+ * @section Separators
  * @markup
- *  <hr class="app-homepage-separator"/>
+ *  <hr class="app-separator"/>
  */
-.#{$prefix}-homepage-separator {
+.#{$prefix}-separator {
   width:  100%;
   height: 1px;
   border: 0;
