--- a/assets/modules/portal/components/_title.scss
+++ b/assets/modules/portal/components/_title.scss
@@ -7,9 +7,9 @@
  * Title for Portal's pages.
  *
  * @molecule Title
- * @section Homepage
+ * @section Portal
  * @markup
- *  <h1 class="app-title">English language</h1>
+ *  <h1 class="app-portal-title">English language</h1>
  */
 .#{$prefix}-portal-title {
   display:     inline-block;
