--- a/assets/modules/portal/portal.scss
+++ b/assets/modules/portal/portal.scss
@@ -17,6 +17,12 @@
 @import "regions/clipboard";
 
 // ====================
+// Elements
+// ====================
+@import "elements/description";
+
+// ====================
 // Components
 // ====================
 @import "components/title";
+@import "components/category-card";
