--- a/assets/nucleus.scss
+++ b/assets/nucleus.scss
@@ -5,6 +5,8 @@
 // ====================
 @import "modules/common/common";
 @import "modules/homepage/homepage";
+@import "modules/portal/portal";
+@import "modules/backoffice/backoffice";
 
 // ====================
 // Imports
