--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -16,7 +16,7 @@
         {% set logo = _verboseLogo() %}
 
         <div class="app-error-page__logo">
-            {% if _setting('global_logo_as_link') %}
+            {% if _setting('header_logo_as_link') %}
                 <a href="{{ path('homepage_index') }}">
             {% endif %}
             {% if logo.type == constant('App\\Service\\Logotype::TYPE_PHRASE') %}
@@ -32,7 +32,7 @@
                      class="app-error-page__logo--image"
                 />
             {% endif %}
-            {% if _setting('global_logo_as_link') %}
+            {% if _setting('header_logo_as_link') %}
                 </a>
             {% endif %}
         </div>
