--- a/templates/regions/header.html.twig
+++ b/templates/regions/header.html.twig
@@ -8,24 +8,26 @@
                 {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь есть все необходимое для того, чтобы изучать английский язык онлайн бесплатно.' }}
             </article>
             <div class="app-header__actions">
-                <button type="button"
-                        name="user"
-                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
-                >
-                    <span class="app-mdi"><i class="mdi mdi-account"></i></span>
-                </button>
-                <button type="button"
-                        name="lang"
-                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
-                >
-                    <span class="app-mdi"><i class="mdi mdi-flag"></i></span>
-                </button>
-                <button type="button"
-                        name="search"
-                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
-                >
-                    <span class="app-mdi"><i class="mdi mdi-magnify"></i></span>
-                </button>
+                {% if _setting('header_show_actions') %}
+                    <button type="button"
+                            name="user"
+                            class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
+                    >
+                        <span class="app-mdi"><i class="mdi mdi-account"></i></span>
+                    </button>
+                    <button type="button"
+                            name="lang"
+                            class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
+                    >
+                        <span class="app-mdi"><i class="mdi mdi-flag"></i></span>
+                    </button>
+                    <button type="button"
+                            name="search"
+                            class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
+                    >
+                        <span class="app-mdi"><i class="mdi mdi-magnify"></i></span>
+                    </button>
+                {% endif %}
             </div>
         </section>
     </section>
