--- a/assets/modules/portal/_helpers.scss
+++ b/assets/modules/portal/_helpers.scss
@@ -6,3 +6,8 @@
 // ====================
 // Resetting
 // ====================
+
+// ====================
+// Mixins & Functions
+// ====================
+@import "mixins";
