--- a/assets/modules/portal/portal.scss
+++ b/assets/modules/portal/portal.scss
@@ -27,3 +27,4 @@
 @import "components/title";
 @import "components/category-card";
 @import "components/table-of-content";
+@import "components/neighbors";
