--- a/templates/portal/components/table-of-content.html.twig
+++ b/templates/portal/components/table-of-content.html.twig
@@ -5,7 +5,7 @@
         {% for general_item in items %}
             {% if general_item.children is defined %}
                 <h3 class="app-portal-table-of-content__category">{{ general_item.title }}</h3>
-                {{ macros.ulli(general_item.children) }}
+                {{ macros.table_of_content(general_item.children, portal_name) }}
             {% endif %}
         {% endfor %}
     </nav>
