--- a/assets/modules/portal/components/_table-of-content.scss
+++ b/assets/modules/portal/components/_table-of-content.scss
@@ -28,7 +28,7 @@
  */
 .#{$prefix}-portal-table-of-content {
   width:  100%;
-  margin: 0 15px;
+  margin: 0;
 
   &__category {
     margin-bottom: 0.7em;
