--- a/assets/modules/portal/portal.scss
+++ b/assets/modules/portal/portal.scss
@@ -28,3 +28,4 @@
 @import "components/category-card";
 @import "components/table-of-content";
 @import "components/neighbors";
+@import "components/breadcrumbs";
