--- a/templates/theory/show.html.twig
+++ b/templates/theory/show.html.twig
@@ -1,6 +1,11 @@
 {% extends 'portal/layout.html.twig' %}
 
 {% block clipboard %}
+    {% if breadcrumbs %}
+        {% include 'portal/components/breadcrumbs.html.twig' with {
+            'breadcrumbs': breadcrumbs
+        } only %}
+    {% endif %}
     <h1 class="app-theory-title">{{ theory.caption|capitalize }}</h1>
     <div class="app-theory-neighbors">
         <div class="app-theory-neighbors__item">
