--- a/assets/modules/common/components/_menu.scss
+++ b/assets/modules/common/components/_menu.scss
@@ -34,7 +34,7 @@
   justify-content: flex-start;
   align-items:     center;
   height:     2.4em;
-  margin:     10px 0 0 15px;
+  padding:    10px 15px 0 15px;
   box-sizing: border-box;
 
   &__separator {
