--- a/assets/modules/common/regions/_sidebar.scss
+++ b/assets/modules/common/regions/_sidebar.scss
@@ -34,7 +34,7 @@
   @include app--box-sizing();
   width:     350px;
   flex-grow: 0;
-  margin:    15px 0 0 15px;
+  padding:   15px 0 0 15px;
 
   & > *:not(:first-child) {
     margin-top: 15px;
