--- a/assets/modules/portal/regions/_clipboard.scss
+++ b/assets/modules/portal/regions/_clipboard.scss
@@ -13,6 +13,7 @@
   display:        flex;
   flex-direction: column;
   align-items:    center;
+  padding:        0 15px 0;
 }
 
 /**
@@ -46,5 +47,5 @@
  * @section Theory
  */
 .#{$prefix}-theory-content {
-  padding: 25px;
+  padding: 25px 0;
 }
