--- a/assets/modules/portal/regions/_clipboard.scss
+++ b/assets/modules/portal/regions/_clipboard.scss
@@ -13,7 +13,7 @@
   display:        flex;
   flex-direction: column;
   align-items:    center;
-  padding:        0 15px 0;
+  padding:        0 15px;
 }
 
 /**
@@ -31,12 +31,12 @@
 }
 
 /**
- * Layer of Theory' content.
+ * Layer of Theory.
  *
  * @structure Layer
  * @section Theory
  */
-.#{$prefix}-theory-content__layer {
+.#{$prefix}-theory__layer {
   width: 100%;
 }
 
