--- a/templates/regions/header.html.twig
+++ b/templates/regions/header.html.twig
@@ -16,6 +16,9 @@
                         <span class="app-mdi"><i class="mdi mdi-account"></i></span>
                     </button>
                 {% endif %}
+                {#{% include 'components/language_switcher.html.twig' with {#}
+                    {#'switcher': language_switcher#}
+                {#} only %}#}
                 <button type="button"
                         name="lang"
                         class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
