--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -29,10 +29,9 @@
         {% endblock %}
     </head>
 
-    <body class="app-body {% block body_class %}{% endblock %}">
-        <div id="app">
-            <example></example>
-        </div>
+    <body id="app"
+          class="app-body {% block body_class %}{% endblock %}"
+    >
         {% block body %}
             {% if _setting('global_show_topbar') %}
                 <section class="app-topline">{{ 'topline' }}</section>
